// ERD v1 - dbml (for dbdiagram.io)
// Detailed schema for VieGo Blog (core entities)

Table users {
  id bigint [pk, increment]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  status varchar(32) [not null, default: 'ACTIVE']
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table profiles {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  full_name varchar(255)
  avatar_url text
  province varchar(100)
  bio text
}

Table roles {
  id bigint [pk, increment]
  name varchar(100) [unique, not null]
  description text
}

Table user_roles {
  user_id bigint [ref: > users.id, not null]
  role_id bigint [ref: > roles.id, not null]
  created_at timestamp [default: `now()`]
  Indexes {
    (user_id, role_id) [unique]
  }
}

Table categories {
  id bigint [pk, increment]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
}

Table posts {
  id bigint [pk, increment]
  author_id bigint [ref: > users.id, not null]
  category_id bigint [ref: > categories.id]
  title varchar(512) [not null]
  slug varchar(512) [unique, not null]
  excerpt text
  content text
  status varchar(32) [not null, default: 'DRAFT']
  published_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table stories {
  id bigint [pk, increment]
  post_id bigint [ref: > posts.id, unique, not null]
  province varchar(100)
  location varchar(255)
  is_archived boolean [default: false]
}

Table tags {
  id bigint [pk, increment]
  name varchar(100) [not null]
}

Table post_tags {
  post_id bigint [ref: > posts.id, not null]
  tag_id bigint [ref: > tags.id, not null]
  Indexes {
    (post_id, tag_id) [unique]
  }
}

Table comments {
  id bigint [pk, increment]
  post_id bigint [ref: > posts.id, not null]
  user_id bigint [ref: > users.id]
  parent_comment_id bigint [ref: > comments.id]
  content text [not null]
  created_at timestamp [default: `now()`]
}

Table likes {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  post_id bigint [ref: > posts.id]
  comment_id bigint [ref: > comments.id]
  created_at timestamp [default: `now()`]
  Indexes {
    (user_id, post_id) [unique]
  }
}

Table follows {
  id bigint [pk, increment]
  follower_id bigint [ref: > users.id, not null]
  followee_id bigint [ref: > users.id, not null]
  created_at timestamp [default: `now()`]
  Indexes {
    (follower_id, followee_id) [unique]
  }
}

Table friend_requests {
  id bigint [pk, increment]
  from_user_id bigint [ref: > users.id, not null]
  to_user_id bigint [ref: > users.id, not null]
  status varchar(32) [default: 'PENDING']
  created_at timestamp [default: `now()`]
}

Table tours {
  id bigint [pk, increment]
  seller_id bigint [ref: > users.id, not null]
  title varchar(255) [not null]
  description text
  price numeric(12,2)
  duration int
  start_date date
  created_at timestamp [default: `now()`]
}

Table tour_images {
  id bigint [pk, increment]
  tour_id bigint [ref: > tours.id, not null]
  url text [not null]
  caption varchar(255)
}

Table bookings {
  id bigint [pk, increment]
  tour_id bigint [ref: > tours.id, not null]
  customer_id bigint [ref: > users.id, not null]
  quantity int [default: 1]
  total_amount numeric(12,2)
  status varchar(32) [default: 'PENDING']
  created_at timestamp [default: `now()`]
}

Table payment_transactions {
  id bigint [pk, increment]
  booking_id bigint [ref: > bookings.id, not null]
  amount numeric(12,2)
  currency varchar(8) [default: 'VND']
  status varchar(32)
  provider varchar(100)
  created_at timestamp [default: `now()`]
}

Table ratings {
  id bigint [pk, increment]
  target_type varchar(50) [not null] // 'post','tour','seller','comment'
  target_id bigint [not null]
  user_id bigint [ref: > users.id, not null]
  score int [not null]
  review text
  created_at timestamp [default: `now()`]
}

Table notifications {
  id bigint [pk, increment]
  recipient_id bigint [ref: > users.id, not null]
  type varchar(100)
  payload text
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table conversations {
  id bigint [pk, increment]
  subject varchar(255)
  created_at timestamp [default: `now()`]
}

Table messages {
  id bigint [pk, increment]
  conversation_id bigint [ref: > conversations.id, not null]
  sender_id bigint [ref: > users.id, not null]
  body text
  content_type varchar(50) [default: 'text']
  created_at timestamp [default: `now()`]
}

Table attachments {
  id bigint [pk, increment]
  message_id bigint [ref: > messages.id, not null]
  url text [not null]
  mime_type varchar(100)
}

// References for clarity
Ref: posts.author_id > users.id
Ref: profiles.user_id > users.id
Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id
Ref: posts.category_id > categories.id
Ref: stories.post_id > posts.id
Ref: post_tags.post_id > posts.id
Ref: post_tags.tag_id > tags.id
Ref: comments.post_id > posts.id
Ref: comments.user_id > users.id
Ref: likes.user_id > users.id
Ref: likes.post_id > posts.id
Ref: likes.comment_id > comments.id
Ref: follows.follower_id > users.id
Ref: follows.followee_id > users.id
Ref: tours.seller_id > users.id
Ref: bookings.tour_id > tours.id
Ref: bookings.customer_id > users.id
Ref: payment_transactions.booking_id > bookings.id
Ref: messages.conversation_id > conversations.id
Ref: messages.sender_id > users.id
Ref: attachments.message_id > messages.id
